# KAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_ROLES.md  ANTIGRAVITY_ADAPTER.md  ARCHITECTURE.md  ASSUMPTIONS.md  CANONICAL_SURFACE_INVENTORY.md  CHANGELOG.md  CLAUDE.litcoffee  CLAUDE.md  CLAUDE_CODE_ADAPTER.md  CODEX_ADAPTER.md  CONFIG_SCHEMA.json  DECISION_LOG.md  DECISION_SCHEMA.json  High-Level Flow.txt  KAI_AUDIT_TRAIL.md  KAI_BASELINE_MATRIX.md  KAI_DEVELOPER_PROMPT.md  KAI_EXECUTION_PROMPT.md  KAI_REBASELINE.md  KNOWLEDGE_BASE.md  ONBOARDING.md  PHASE_PLAN.md  PROJECT_SPEC.md  README.md  RISK_REGISTER.md  RUNBOOK.md  SECURITY.md  SPRINT_LEDGER.md  SPRINT_TRACEABILITY.md  TASKLIST.litcoffee  TASKLIST.md  TELEGRAM_INTERFACE.md  Technical Stack.txt  alembic.ini  cleanup_manifest.md  (+5 more)
.github/: BRANCH_STRATEGY.md  pull_request_template.md
.github/workflows/: ci.yml  lock-update.yml
KAI-Persona/: 7 Identitäts-Ebenen.txt  Der zentrale Satz.txt  KAI Prompt-Bibel V1.txt  Kai Asset Production Pack V3 3.docx  Kai Creative Implementation Pack V3 1.docx  Kai Final Claude Code Execution Prompt V3 4.docx  Kai Prompt Bibel V1 Persona Non Grada.docx  Kai Technical Ui Pack V3 2.docx  kai_asset_production_pack_v_3_3.md  kai_prompt_bibel_v_1_persona_non_grada.md
app/agents/: context_builder.py  mcp_adapter.py  mcp_server.py  tool_registry.py  worker.py
app/alerts/: AGENTS.md  audit.py  auto_annotator.py  blocked_annotator.py  blocked_audit.py  blocked_outcome_report.py  d227_blockreason_quality.py  d227_hitrate_reconciliation.py  d227_source_reliability_crosscheck.py  daily_briefing.py  digest.py  dispatcher.py  eligibility.py  evaluator.py  feature_analysis.py  formatters.py  forward_precision_watchdog.py  health_check.py  hit_rate.py  hold_metrics.py  hold_metrics_freshness.py  notify.py  offline_baseline.py  price_check.py  provenance_backfill.py  provenance_metrics.py  reporting.py  rules.py  service.py  threshold.py  tv_bridge.py
app/analysis/: AGENTS.md  crypto_relevance.py  factory.py  pipeline.py  prompts.py  scoring.py  source_confluence.py  validation.py
app/api/: AGENTS.md  client_ip.py  deps.py  event_hub.py  main.py  main.py.bak.20260514  main.py.bak.20260514-p9
app/audit/: __init__.py  decision_chain.py  kai_audit_service.py  sanitization.py  stream_validation.py  structured_reasoning.py
app/capital/: __init__.py  reserve_policy.py  segmentation.py
app/chain/: __init__.py  adapter.py  cache.py  client.py  fee_series.py  fee_shadow.py
app/cli/: AGENTS.md  main.py  research.py
app/compliance/: __init__.py  provenance.py
app/core/: AGENTS.md  briefs.py  capital_settings.py  chain_settings.py  enums.py  errors.py  evidence.py  evidence_settings.py  file_lock.py  integrity_settings.py  lightning_settings.py  logging.py  prereg_settings.py  query.py  re_entry_mode.py  schema_binding.py  schema_runtime.py  settings.py  settings.py.bak.20260514-p9  signals.py  symbol_guard.py  types.py  watchlists.py
app/decisions/: __init__.py  journal.py  signal_detail.py
app/enrichment/: AGENTS.md
app/execution/: __init__.py  audit_replay.py  backtest_engine.py  cost_model.py  entry_policy.py  entry_watcher.py  envelope_to_paper_bridge.py  envelope_to_paper_bridge.py.bak.20260514-p8  (+24 more)
brand/: _render_png.py
config/: asset_universe.yaml  kai_assets_manifest.json  kai_persona.yaml  model_registry.json  prompt_registry.json  stablecoin_risk.yaml  telegram_menu.json  venue_fees.yaml
deploy/: README.md
docker/: Dockerfile
docs/: AI_HANDOFF.md  CODEMAP.md  KAI_IDENTITY.md  advanced_roadmap.md  analysis_pipeline.md  architecture.md  benchmark_promotion_contract.md  companion_workflow.md  connectors.md  contracts.md  contracts_archive.md  data_flow.md  dataset_evaluation_contract.md  feature_flags.md  intelligence_architecture.md  lightning_macaroon_matrix.md  narrative_clustering.md  operator_board.json  phase5_re_entry.md  research_outputs.md  security.md  signal_candidates.md  source_classification.md  sprint11_distillation_contract.md  sprint17_route_integration_contract.md  sprint18_mcp_contract.md  sprint19_distribution_contract.md  sprint22_monitoring_contract.md  sprint24_artifact_lifecycle_contract.md  sprint9_promotion_audit_contract.md  telegram_ux_smoke.md  tradingview_alert_setup.md  transcripts.md  tuning_promotion_contract.md
monitor/: alert_rules.yml  entity_aliases.yml  hashtags.txt  historical_events.yml  keywords.txt  news_domains.txt  podcast_feeds_raw.txt  podcast_feeds_resolved.txt  podcast_sources_unresolved.txt  social_accounts.txt  source_candidates_seed.json  source_watch.txt  watchlists.yml  website_sources.txt  youtube_channels.txt
scripts/: _ph5c_gov_update.py  _ph5c_reconcile.py  agent_worker_start.sh  agent_worker_stop.sh  apply_phantom_correction.py  asset_rotation_shadow_refresh.py  audit_rotate.py  backfill_paper_audit_pnl.py  bayes_posterior_recalc.py  bearish_block_volume.py  blocked_outcomes_analysis.py  book_oracle_earnings.py  build_unlock_events.py  build_whale_flow_series.py  check_blocked_outcomes.ps1  check_decision_log.py  check_telegram_avatar.py  churn_config_sweep.py  coingecko_overview_refresh.py  counterfactual_replay.py  d2_r4_regime_filter_analysis.py  daily_review_status.py  edge_ic_notify.py  edge_report_oneshot.sh  eligibility_probe.py  entry_watch_task.ps1  eow_priority_scoring_snapshot.py  evaluate_l2_evidence.py  evaluate_l402_demand.py  evaluate_momentum_evidence.py  evaluate_v5_evidence.py  f2_recalc_20260525.py  f2_v2_bearish_reeval.py  f3_v2_confidence_recalibration.py  falsify_momentum.py  freshness_check.py  funding_cache_refresh.py  godfile_baseline.json  godfile_ratchet.py  hotp_provision.py  (+79 more)
tests/: conftest.py  conftest.py.bak.20260514-p7  create_pending_doc.py  generate_candidate_jsonl.py  setup_sprint11_data.py  test_cleaner.py  test_podcast_pipeline.py  test_source_registry.py  test_website_registry.py  test_youtube_registry.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
(+1676 files in other folders)
