[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-analyst-trading-bot"
version = "0.1.0"
description = "Modular AI Analyst & Trading Bot - Multi-Market Monitoring, Analysis, Alerting, Research"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "AI Analyst Trading Bot Team" }
]
keywords = ["trading", "ai", "crypto", "finance", "analysis", "monitoring"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "selectolax>=0.3.21",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "aiosqlite>=0.17.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "jsonschema>=4.23.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "langdetect>=1.0.9",
    "tiktoken>=0.8.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "factory-boy>=3.3.1",
    "freezegun>=1.5.1",
]

[project.scripts]
trading-bot = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v"]

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]
