[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-analyst-trading-bot"
version = "0.1.0"
description = "Modular AI Analyst & Trading Bot - Multi-Market Monitoring, Analysis, Alerting, Research"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "AI Analyst Trading Bot Team" }
]
keywords = ["trading", "ai", "crypto", "finance", "analysis", "monitoring"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "selectolax>=0.3.21",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "aiosqlite>=0.17.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "jsonschema>=4.23.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "langdetect>=1.0.9",
    "tiktoken>=0.8.0",
    "mcp>=1.2.0",
    "telethon>=1.43.0",
    "portalocker>=2.8",
    "youtube-transcript-api>=1.2.0",
    "trafilatura>=1.12.0",
    # Security: explicit minimums for transitive deps with active CVEs (PR #5)
    "lxml>=6.1.0",  # CVE-2026-41066
    "mako>=1.3.12",  # CVE-2026-44307
    "python-multipart>=0.0.27",  # CVE-2026-42561
    "pyotp>=2.9.0",  # HOTP-Verifier Task 39 (PR #6)
    "duckdb>=1.1.0",  # ADR 0003 DuckDB-Pivot Phase 1 (analytical read-layer)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "factory-boy>=3.3.1",
    "freezegun>=1.5.1",
    "hypothesis>=6.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
trading-bot = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E501"]
# Alembic-generated migrations: never hand-edited; regeneration would
# overwrite stylistic fixes. Mypy already excludes "migrations/".
"app/storage/migrations/versions/*.py" = ["E501", "I001", "UP007", "UP035"]
# Transitional ignores — PR #5 Signal-to-Execution Pipeline.
# Files modified by Codex/Antigravity parallel-session with inline-string
# fixtures and JSON-API camelCase fields. Cleanup-Cycle nach Pi-5-Deploy.
"app/api/routers/kai.py" = ["B008", "N815"]
"app/cli/commands/ingestion.py" = ["E501"]
"app/messaging/kai_chat_engine.py" = ["E501"]
"app/messaging/telegram_bot.py" = ["E501"]
"app/security/live_caps.py" = ["N818"]
"tests/unit/test_alert_eligibility.py" = ["E501"]
"tests/unit/test_analysis_pipeline.py" = ["E402"]
"tests/unit/test_kai_persona.py" = ["E501"]
"tests/unit/test_kai_risk_guards.py" = ["C408"]
"tests/unit/test_kai_telegram_renderer.py" = ["C408"]
"tests/unit/test_newsdata_adapter.py" = ["E501"]
# Phase-0 N+2 security modules — N818 exempt for domain-meaningful names
# (HotpReplayDetected, HotpVerificationFailed).
"app/security/hotp_auth.py" = ["N818"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "migrations/"]

# Transitional mypy-strict overrides — PR #5 Signal-to-Execution Pipeline.
# Module mit preexisting type-Schulden quer durchs Repo (Codex/Antigravity-
# parallel-session). Type-Cleanup-Sprint kommt als eigener PR nach Pi-Deploy.
# Klar markiert damit es nicht in den Standard-Code-Review-Pfad einsickert.
[[tool.mypy.overrides]]
module = [
    "app.agents.tools.canonical_read",
    "app.agents.worker",
    "app.alerts.audit",
    "app.alerts.daily_briefing",
    "app.alerts.feature_analysis",
    "app.alerts.hold_metrics",
    "app.analysis.keywords.aliases",
    "app.analysis.keywords.watchlist",
    "app.api.main",
    "app.api.middleware.security_headers",
    "app.api.routers.dashboard",
    "app.api.routers.events",
    "app.api.routers.kai",
    "app.api.routers.signals",
    "app.cli.commands.ingestion",
    "app.cli.commands.research_core",
    "app.cli.commands.tradingview",
    "app.cli.main",
    "app.execution.audit_replay",
    "app.execution.envelope_to_paper_bridge",
    "app.execution.exchanges.factory",
    "app.execution.fees",
    "app.execution.operator_entry_watch",
    "app.execution.paper_engine",
    "app.execution.portfolio_read",
    "app.ingestion.telegram_channel_worker",
    "app.ingestion.youtube.adapter",
    "app.integrations.twitter.client",
    "app.market_data.binance_adapter",
    "app.market_data.bybit_adapter",
    "app.messaging.kai_chat_engine",
    "app.messaging.kai_persona",
    "app.messaging.signal_parser",
    "app.messaging.telegram_bot",
    "app.messaging.voice_transcriber",
    "app.orchestrator.trading_loop",
    "app.trading.signal_consensus",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default: skip @pytest.mark.testnet (real-network gegen Binance/Bybit-Testnet).
# Operator activates via: pytest -m testnet + KAI_TESTNET_INTEGRATION=1 env-Flag.
addopts = ["-v", "-m", "not testnet"]
markers = [
    "testnet: integration tests gegen Binance/Bybit-Testnet — needs API-Keys + KAI_TESTNET_INTEGRATION=1",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]
